--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
           <h3>Nicolas St-Amour</h3>
         </div>
         <p class="text-white">Geeky Franuck (French Canadian), Father of 3 wonderful kids, Lucky husband, Lover of
-          cats and dogs,
-          Programmer, Cerevisaphile, Gamer</p>
+          cats and dogs, Programmer, Beer Lover, Gamer</p>
         <a href="#about" class="btn btn-primary js-scroll-trigger">About Me</a>
       </div>
     </div>
@@ -121,15 +120,6 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <hr class="my-4">
-              <div class="small text-primary">+1 (514) 452-1919</div>
-            </div>
-          </div>
-        </div>
       </div>
 
       <div class="social d-flex justify-content-center">
