Changed kids picture :)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img class="pull-left mb-5" src="img/kidsBW.jpg" style="border-radius: 50%; border: darkgray 5px;" />
+          <img class="pull-left mb-5" src="img/kidsBW.jpg" height="360px" width="360px" style="border-radius: 50%; border: darkgray 5px;" />
           <p class="text-white-50 text-left mb-2">Hey, I'm Nick.<br /><br />
             Born in the late seventies, I grew up on the south shore of Montréal, Québec, Canada.
             I have always been a geek and a gamer ever since I touched an Intellivision controller. I have three
