--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body id="page-top">
@@ -38,9 +44,6 @@
       </button>
       <div class="collapse navbar-collapse navbar-inverse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
@@ -67,14 +70,6 @@
     </div>
     </div>
   </header>
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
-    <div class="container">
-      <h2 class="text-center mb-5">Projects</h2>
-      <p>Coming soon...</p>
-    </div>
-  </section>
 
   <!-- About Section -->
   <section id="about" class="about-section text-center">
