--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -37,8 +38,9 @@
   <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Nicolas St-Amour</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -76,13 +78,16 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img class="pull-left mb-5" src="img/kidsBW.jpg" height="360px" width="360px" style="border-radius: 50%; border: darkgray 5px;" />
+          <img class="pull-left mb-5" src="img/kidsBW.jpg" height="360px" width="360px"
+            style="border-radius: 50%; border: darkgray 5px;" />
           <p class="text-white-50 text-left mb-2">Hey, I'm Nick.<br /><br />
             Born in the late seventies, I grew up on the south shore of Montréal, Québec, Canada.
             I have always been a geek and a gamer ever since I touched an Intellivision controller. I have three
             beautiful kids (2 daughters and, the youngest, a son). I play hockey (as is tradition for French Canadian
-            boys), am known to ride a snowboard from time to time and I always appreciate a good beer (notably IPAs).<br /><br />
-            Outside of programming, I have interests in video games, drawing, video edition and music creation.<br /><br />
+            boys), am known to ride a snowboard from time to time and I always appreciate a good beer (notably
+            IPAs).<br /><br />
+            Outside of programming, I have interests in video games, drawing, video edition and music
+            creation.<br /><br />
             Random facts:</p>
           <p class="text-white-50 text-left pl-4 pr-4">
             I have a twin brother (I'm 4 minutes older, suck it Fred!)<br />
@@ -126,9 +131,6 @@
         </a>
         <a href="https://github.com/stamoun" class="mx-2" target="_blank">
           <i class="fab fa-github"></i>
-        </a>
-        <a href="https://www.reddit.com/user/stamoun" class="mx-2" target="_blank">
-          <i class="fab fa-reddit"></i>
         </a>
         <a href="https://www.youtube.com/channel/UCSDesOZxpvrg32xkBsxONgg" class="mx-2" target="_blank">
           <i class="fab fa-youtube"></i>
