Use JF to output the copyright year

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             beautiful kids (2 daughters and, the youngest, a son). I play hockey (as is tradition for French Canadian
             boys), am known to ride a snowboard from time to time and I always appreciate a good beer (notably
             IPAs).<br /><br />
-            Outside of programming, I have interests in video games, drawing, video edition and music
-            creation.<br /><br />
+            Outside of programming, I have interests in video games, drawing, video edition, music
+            creation and homebrewing.<br /><br />
             Random facts:</p>
           <p class="text-white-50 text-left pl-4 pr-4">
             I have a twin brother (I'm 4 minutes older, suck it Fred!)<br />
@@ -143,7 +143,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Nicolas St-Amour 2019
+      Copyright &copy; Nicolas St-Amour <script>document.write(new Date().getFullYear())</script>
     </div>
   </footer>
 
